TA-497 Fix issue with preflight missing allow origin header